Refactored